# goals

./: .env.backup  .eslintrc.json  .gitattributes  .gitignore  .nvmrc  AGENTS.md  Calendar copy.tsx  Calendar_old.tsx  E2E_TESTING_GUIDE.md  E2E_TEST_DEBUG_README.md  GOOGLE_CALENDAR_INTEGRATION.md  GOOGLE_OAUTH_PRODUCTION_FIX.md  GOOGLE_OAUTH_SETUP.md  GoalView.tsx  MIGRATION_FIXES.md  PARALLEL_E2E_TESTING.md  PUSH_NOTIFICATION_NOTE.md  PWA_SETUP.md  README.md  ROUTINE_RESCHEDULE_FEATURE.md  TESTING.md  cleanup-parallel-test-env.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.worker-0.yaml  docker-compose.worker-1.yaml  docker-compose.worker-2.yaml  docker-compose.worker-3.yaml  docker-compose.worker-4.yaml  docker-compose.worker-5.yaml  docker-compose.worker-6.yaml  docker-compose.worker-7.yaml  docker-compose.yaml  generate-vapid-keys.sh  manage-compose.sh  package-lock.json  package.json  run-parallel-tests.sh  run-tests.sh  (+8 more)
.github/: dependabot.yml
backend/: Cargo.toml  Dockerfile.dev  Dockerfile.prod  run_integration_tests.sh  vapid.env.example
backend/src/: auth.rs  calendar.rs  calender.rs  day.rs  db.rs  goal.rs  http_handler.rs  lib.rs  list.rs  main.rs  middleware.rs  network.rs  query.rs  routine.rs  routine_processor.rs  traversal.rs
backend/src/ai/: mod.rs  openrouter.rs  prompts.json  query.rs  tool_registry.rs
backend/src/jobs/: gcal_sync_scheduler.rs  mod.rs  notification_scheduler.rs  routine_generator.rs
backend/src/server/: auth.rs  db.rs  http_handler.rs  main.rs  middleware.rs  mod.rs  token_manager.rs
backend/src/tools/: achievements.rs  autofill.rs  calendar.rs  day.rs  event.rs  gcal.rs  gcal_client.rs  goal.rs  list.rs  migration.rs  mod.rs  network.rs  notification_settings.rs  push.rs  relations.rs  retry_client.rs  routine.rs  routine_exceptions.rs  scheduler.rs  stats.rs  telegram.rs  theme_settings.rs  traversal.rs
backend/tests/: README.md  routine_integration_test.rs
db/: Dockerfile.ci  Dockerfile.dev  Dockerfile.prod  backup.sh  crontab  init.sql  seed_test_db.sh  (+1 more)
(+195 files in other folders)
