[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
#sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
bcrypt = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
hyper = { version = "1.5.1", features = ["full"] }
neo4rs = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9.3.0"
chrono = "0.4"
chrono-tz = "0.10.1"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.4", features = ["v4"] }
futures-util = "0.3"
urlencoding = "2.1"
regex = "1.10"
tokio-cron-scheduler = "0.13"
oauth2 = "4.4"
yup-oauth2 = "9.0"
google-calendar3 = "5.0.5+20240328"
hyper-rustls = "0.24"

[[bin]]
name = "backend"
path = "src/main.rs"
